--- a/screen.css
+++ b/screen.css
@@ -1,4 +1,5 @@
-/* Add screen styles below */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap');
+
 body {
-    background: red;
+    font-family: "Inter", sans-serif;
 }
