--- a/screen.css
+++ b/screen.css
@@ -1,28 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap');
 
+:root {
+    --main-bg-color: #E9E9E9;
+    --primary-text-color: #424242;
+    --accent-color: #FF3F3C;
+}
+
 body {
+    background: var(--main-bg-color);
+    color: var(--primary-text-color);
     font-family: "Inter", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
-    font-size: 15px;
+header {
+    padding: 20px;
+    margin-bottom: 100px;
 }
 
-h2 {
-    font-size: 70px;
-    text-align: center;
+header h1 {
+    margin: 0
+    font-weight: normal;
 }
 
-h3 {
-    font-size: 30px;
-    text-align: center;
-}
-
-.cta {
-    text-align: center;
-}
-
-button {
-    background-color: red;
-    color: white;
+main {
+    background: url(polaroid.png) no-repeat center 100px;
+    margin: 0 auto;
+    width: 1000px;
 }
