--- a/screen.css
+++ b/screen.css
@@ -35,7 +35,10 @@ main {
     min-height: 800px;
 }
 
-button {
-    background-color: var(--accent-color);
-    color: var(var(--main-bg-color));
+hero h2 {
+    font-size: 9em;
+    line-height: 1em;
+    text-transform: uppercase;
+    margin: 0;
 }
+
