--- a/screen.css
+++ b/screen.css
@@ -21,7 +21,7 @@ header {
 
 header h1 {
     margin: 0
-    font-weight:normal;
+    font-weight: normal;
 }
 
 main {
@@ -42,3 +42,9 @@ hero h2 {
     margin: 0;
 }
 
+.details ul li {
+    background: url('qrcode-solid.png') no-repeat center left;
+    list-style-type: none;
+    margin: 10px 0;
+    padding: 0 0 0 40px
+}
