--- a/screen.css
+++ b/screen.css
@@ -17,12 +17,13 @@ body {
 header {
     padding: 20px;
     margin-bottom: 100px;
-    font-size: 80px;
+    font-weight: lighter;
 }
 
 header h1 {
     margin: 0
     font-weight: normal;
+    font-size: 60px;
 }
 
 main {
