--- a/screen.css
+++ b/screen.css
@@ -22,14 +22,16 @@ header {
 
 header h1 {
     margin: 0
-    font-weight: normal;
-    font-size: 60px;
 }
 
 main {
     background: url(polaroid.png) no-repeat center 100px;
     margin: 0 auto;
     width: 1000px;
+}
+
+h2 {
+    font-size: 40px;
 }
 
 .hero {
