--- a/screen.css
+++ b/screen.css
@@ -30,10 +30,6 @@ main {
     width: 800px;
 }
 
-h2 {
-    font-size: 40px;
-}
-
 .hero {
     text-align: center;
     min-height: 800px;
@@ -73,3 +69,8 @@ hero h2 {
     margin: 10px 0;
     padding: 0 0 0 35px
 }
+
+.button {
+    background-color: var(--accent-color);
+    color: var(--main-bg-color);
+} 
