--- a/screen.css
+++ b/screen.css
@@ -73,3 +73,8 @@ hero h2 {
     margin: 10px 0;
     padding: 0 0 0 35px
 }
+
+.button {
+    background: var(--accent-color);
+    color: var(--main-bg-color);
+}
